tests/fun-dec-name-mismatch/out.txt
error: mismatched names: expected f, found g
  ┌─ err.sml:2:5
  │
2 │   | g _ = 2
  │     ^

typechecking failed
